cmake_minimum_required(VERSION 3.2)

PROJECT(pb)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(cmake/ModuleImport.cmake)
INCLUDE(cmake/ModuleCompileOptions.cmake)
ModuleSetCompileOptions()

SET(PB_VERSION_MAJOR "1")
SET(PB_VERSION_MINOR "0")
SET(PB_VERSION_PATCH "1")
SET(PB_VERSION "${PB_VERSION_MAJOR}.${PB_VERSION_MINOR}.${PB_VERSION_PATCH}")

MESSAGE(STATUS "VERSION: ${PB_VERSION}")

ADD_DEFINITIONS(-DUSE_PB)
ADD_DEFINITIONS(-DLUA_COMPAT_MODULE -DLUA_COMPAT_APIINTCASTS)
OPTION(USE_PB_INNER "use lua inner" ON)
OPTION(USE_PB_TEST "use pb test" ON)

#ModuleImport("dmlog" "thirdparty/dmlog")

IF (WIN32)
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/windows)
ENDIF(WIN32)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/pb)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/test)

IF (USE_PB_TEST)
    FILE(GLOB DMLUA_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.h
    )

    LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "lua.c$")
    LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "luac.c$")
    LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "wmain.c$")

    FILE(GLOB LUA_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/lua/lua.c
    )
ENDIF(USE_PB_TEST)


FILE(GLOB PB_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/include/*.h

${CMAKE_CURRENT_SOURCE_DIR}/src/pb/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/src/pb/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/src/pb/*.c
${CMAKE_CURRENT_SOURCE_DIR}/src/pb/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/src/pb/*.h
)

IF (WIN32)
    LIST(APPEND PB_SOURCES)
ENDIF(WIN32)

FILE(GLOB_RECURSE PBTEST_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/test/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/test/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/test/*.c
${CMAKE_CURRENT_SOURCE_DIR}/test/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/test/*.h)

IF (WIN32)
    IF (USE_PB_INNER)
        ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})
        SET_TARGET_PROPERTIES(lua53 PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL -DLUA_CORE")
        
        ADD_EXECUTABLE(lua ${LUA_SOURCES})
        TARGET_LINK_LIBRARIES(lua lua53)
    ENDIF(USE_PB_INNER)

    ADD_LIBRARY(pb SHARED ${PB_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/src/pb/pb_module.def)
    TARGET_LINK_LIBRARIES(pb lua53)

    SET_TARGET_PROPERTIES(pb PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL -DLUA_LIB")

    IF (USE_PB_TEST)
        ADD_EXECUTABLE(pbtest ${PBTEST_SOURCES})
        TARGET_LINK_LIBRARIES(pbtest pb)
        SET_TARGET_PROPERTIES(pbtest PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL")
    ENDIF(USE_PB_TEST)

ELSEIF (APPLE)
    ADD_DEFINITIONS(-DLUA_USE_MACOSX)
    IF (USE_PB_INNER)
        ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})
        SET_TARGET_PROPERTIES(lua53 PROPERTIES COMPILE_FLAGS "-Wl,-undefined -Wl,dynamic_lookup" )
        SET_TARGET_PROPERTIES(lua53 PROPERTIES PREFIX "")
        SET_TARGET_PROPERTIES(lua53 PROPERTIES SUFFIX ".so")
    
        ADD_EXECUTABLE(lua ${LUA_SOURCES})
        TARGET_LINK_LIBRARIES(lua lua53 dl)
    ENDIF(USE_PB_INNER)

    ADD_LIBRARY(pb SHARED ${PB_SOURCES})
    SET_TARGET_PROPERTIES(pb PROPERTIES COMPILE_FLAGS "-Wl,-undefined -Wl,dynamic_lookup" )
    SET_TARGET_PROPERTIES(pb PROPERTIES PREFIX "")
    SET_TARGET_PROPERTIES(pb PROPERTIES SUFFIX ".so")

    TARGET_LINK_LIBRARIES(pb lua53)

    IF (USE_PB_TEST)
        ADD_EXECUTABLE(pbtest ${PBTEST_SOURCES})
        TARGET_LINK_LIBRARIES(pbtest pb)
    ENDIF(USE_PB_TEST)   
ELSEIF (UNIX)
    ADD_DEFINITIONS(-DLUA_USE_LINUX)

    IF (USE_PB_INNER)
        ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})
        SET_TARGET_PROPERTIES(lua53 PROPERTIES COMPILE_FLAGS "-Wl,-E" )

        ADD_EXECUTABLE(lua ${LUA_SOURCES})
        TARGET_LINK_LIBRARIES(lua lua53 m dl)
    ENDIF(USE_PB_INNER)

    ADD_LIBRARY(pb SHARED ${PB_SOURCES})
    SET_TARGET_PROPERTIES(pb PROPERTIES COMPILE_FLAGS "-Wl,-E" )
    SET_TARGET_PROPERTIES(pb PROPERTIES PREFIX "")
    TARGET_LINK_LIBRARIES(pb lua53)
    
    IF (USE_PB_TEST)
        ADD_EXECUTABLE(pbtest ${PBTEST_SOURCES})
        TARGET_LINK_LIBRARIES(pbtest pb)
    ENDIF(USE_PB_TEST)   
ENDIF ()

#ADD_CUSTOM_COMMAND(
#TARGET pbtest
#PRE_BUILD
#COMMAND ${CMAKE_COMMAND} -E copy_if_different
#${CMAKE_CURRENT_SOURCE_DIR}/config/test.csv
#$<TARGET_FILE_DIR:pbtest>
#)

#INSTALL(DIRECTORY include/ DESTINATION include)
#INSTALL(TARGETS pb
#        RUNTIME DESTINATION bin
#        LIBRARY DESTINATION lib
#        ARCHIVE DESTINATION lib)

#SET(PB_LIBS "pb")
#MARK_AS_ADVANCED(${PB_LIBS})
